--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -17,6 +17,8 @@ body {
     color: var(--cor-secundaria);
 }
 .cabecalho{
+    display: flex;
+    gap: 520px;
     padding: 1% 0% 1% 10%;
     background-color: var(--cor-terciaria);
 }
@@ -30,40 +32,75 @@ body {
     text-decoration: none;
     border : 2px solid var(--cor-terciaria);
     border-radius: 30px;
-    padding:    10px;
+    padding: 10px;
+    transition-duration: 885ms;
 }
 .cabecalho__menu__link:hover{
-        background-color: #272727;
-        color: #b2b2b2;
-        transition: 915ms;
-        
+    padding: 25px;
+    background-color: #272727;
+    color: #b2b2b2;
+    transition: 885ms; 
+    font-size: 14px;   
 }
+.cabecalho__menu__foto{
+    
+    width: 60px;
+}
+
 .apresentacao{
-    margin:3% 7% 5%;
+    margin:3% 3% 5% 5%;
     display:flex;
     align-items: center;
     justify-content: space-between;
 }
 .apresentacao__conteudo{
-    width: 615px;
+    width: 700px;
     display: flex;
     flex-direction: column;
     gap: 13px;
 }
 .imagem{
-    width: 450px;
+    width: 350px;
 }
 img{
     border-radius: 10px;
     border: solid 1px var(--cor-terciaria);
 }
+.apresentacao__skills{
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+}
+.apresentacao__conteudo__skills{
+    padding-left: 30px;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.apresentacao__icones__skills{
+    display: flex;
+    align-items: center;
+    margin: 7px;
+    gap: 150px;
+    
+}
+.icones__individuais{
+    border-color: #000000;
+    border-radius: 8px;
+    width: 50px;
+}
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    justify-content: center;
+    font-size: 25px;
 }
 .titulo-destaque{
     color : var(--cor-terciaria);
 }
 .apresentacao__conteudo__texto{
+   
     font-size: 15px;
 }
 .apresentacao__links{
@@ -78,7 +115,6 @@ img{
     font-size: 28px;
     
 }
-
 .apresentacao__links__link{
     /* background-color: rgb(28, 185, 238); */
     display: flex;
@@ -91,16 +127,16 @@ img{
     font-size: 18px;
     padding: 21.5px 0; 
     color : var(--cor-terciaria);
+    transition-duration: 915ms ;
 }
 .imgLink{
     width: 20px;
 }
-
 .apresentacao__links__link:hover{
     background-color: var(--cor-hover);
     transition: 915ms;
+    
 }
-
 .rodape{
     padding: 7px;
     color: var(--cor-primaria);
@@ -115,6 +151,7 @@ img{
 .imagemPerfil{
     width: 350px;
 }
-.imagemAlura{
+.iconesSkills{
     width: 30px;
 }
+
