--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -1,4 +1,3 @@
-
 :root {
     --cor-primaria: #000000;
     --cor-secundaria: #f6f6f6;
@@ -17,34 +16,42 @@ body {
     color: var(--cor-secundaria);
 }
 .cabecalho{
+    border: solid 0.5px var(--cor-terciaria);
     display: flex;
-    gap: 520px;
-    padding: 1% 0% 1% 10%;
-    background-color: var(--cor-terciaria);
+    gap: 380px;
+    padding: 1% 0% 0% 10%;
+    margin-bottom: 5px;
+    background-color: var(--cor-primaria);  
 }
 .cabecalho__menu{
     display: flex;
     gap: 80px;
+    padding-bottom: 8px;
 }
 .cabecalho__menu__link{
     font-family: var(--fronte-principal);
-    color: var(--cor-primaria);
+    color: var(--cor-terciaria);
     text-decoration: none;
-    border : 2px solid var(--cor-terciaria);
-    border-radius: 30px;
-    padding: 10px;
-    transition-duration: 885ms;
-}
-.cabecalho__menu__link:hover{
+    border : 2px solid var(--cor-primaria);
+    border-radius:30px;   
     padding: 25px;
-    background-color: #272727;
-    color: #b2b2b2;
-    transition: 885ms; 
-    font-size: 14px;   
+    transition-duration: 860ms;
 }
+.cabecalho__menu__link:hover{   
+    padding-bottom: 25px;
+    border : 2px solid #272727;
+    background-color: #272727;
+    color: #f6f6f6; 
+    box-shadow: 0 0 50px 20px rgba(2, 140, 167, 0.25); 
+    transition: 860ms ease-in-out; 
+     
+}
+
 .cabecalho__menu__foto{
-    
-    width: 60px;
+    padding: 1px, 0px, 1px, 0px;
+    height: 70px;
+    width: 70px;
+    border: 0.1px solid #000;
 }
 
 .apresentacao{
@@ -52,15 +59,17 @@ body {
     display:flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
+
 }
 .apresentacao__conteudo{
-    width: 700px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 13px;
+    gap: 30px;
 }
 .imagem{
-    width: 350px;
+    width: 35%;
 }
 img{
     border-radius: 10px;
@@ -82,37 +91,37 @@ img{
 }
 .apresentacao__icones__skills{
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 7px;
-    gap: 150px;
-    
+    margin: 5px;
+    gap: 150px;;
 }
 .icones__individuais{
     border-color: #000000;
     border-radius: 8px;
-    width: 50px;
+    width: 37.5px;
 }
 .apresentacao__conteudo__titulo{
     justify-content: center;
-    font-size: 25px;
+    font-size: 2rem;
 }
 .titulo-destaque{
     color : var(--cor-terciaria);
 }
 .apresentacao__conteudo__texto{
    
-    font-size: 15px;
+    font-size: 1rem;
 }
 .apresentacao__links{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap : 10px;
+    gap : 15px;
 }
 .apresentacao__links__subtitulo{
     font-family: var(--fronte-principal);
-    font-size: 28px;
+    font-size: 1,75rem;
     
 }
 .apresentacao__links__link{
@@ -121,10 +130,10 @@ img{
     justify-content: center;
     gap: 14px;
     border : 2px solid var(--cor-terciaria);
-    width: 280px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 18px;
+    font-size: 1.1rem;
     padding: 21.5px 0; 
     color : var(--cor-terciaria);
     transition-duration: 915ms ;
@@ -135,18 +144,19 @@ img{
 .apresentacao__links__link:hover{
     background-color: var(--cor-hover);
     transition: 915ms;
+    box-shadow: 0 0 50px 20px rgba(4, 77, 92, 0.5); 
     
 }
 .rodape{
-    padding: 7px;
-    color: var(--cor-primaria);
-    background-color: var(--cor-terciaria);
+    border: solid 0.5px var(--cor-terciaria);
+    padding: 5px;
+    color: var(--cor-terciaria);
+    background-color: var(--cor-primaria);
     text-align: center;
     font-family: var(--fronte-principal);
-    font-size: 15px;
-    position: fixed;
-    width: 100%;
-    bottom:0;
+    font-size: 1rem; 
+  
+   
 }
 .imagemPerfil{
     width: 350px;
@@ -155,3 +165,21 @@ img{
     width: 30px;
 }
 
+@media (max-width: 1200px ) {
+    .cabecalho{
+        padding: 6%;
+
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .apresentacao { 
+    flex-direction: column-reverse;
+    padding: 5%;
+    }
+    .apresentacao__conteudo{
+        width: auto;
+    }
+
+}
+    
