--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -2,9 +2,15 @@
     --cor-primaria: #000000;
     --cor-secundaria: #f6f6f6;
     --cor-terciaria: #22d4fd;
-    --cor-hover: #272727;
+    --cor-hover: #161616;
     --fronte-principal: 'Poppins', sans-serif;
 }
+@keyframes animacao__rodape {
+    0% {background-color: var(--cor-primaria);}
+    50% {background-color: #181818;}
+    100% {background-color: var(--cor-primaria);}
+}
+
 *{
     margin: 0 ;
     padding:0;
@@ -12,23 +18,27 @@
 }
 body {
     box-sizing: border-box;
-    background-color: var(--cor-primaria);
+    background: linear-gradient(180deg, #000000 0%, #1a3131 100%);
     color: var(--cor-secundaria);
 }
 .cabecalho{
-    border: solid 0.5px var(--cor-terciaria);
     display: flex;
     gap: 380px;
-    padding: 1% 0% 0% 10%;
+    padding: 1% 0% 1% 10%;
     margin-bottom: 5px;
     background-color: var(--cor-primaria);  
+    width: auto;
+    animation-name: animacao__cabecalho;
+    animation-duration: 6s;
+    animation-delay: 1.5s;
+    animation-iteration-count: infinite;
 }
 .cabecalho__menu{
     display: flex;
     gap: 80px;
-    padding-bottom: 8px;
+    padding: 15px , 25px, 15px, 25px;
 }
-.cabecalho__menu__link{
+.cabecalho__menu__link{   
     font-family: var(--fronte-principal);
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -36,22 +46,28 @@ body {
     border-radius:30px;   
     padding: 25px;
     transition-duration: 860ms;
+    font-weight: bold;  
+    animation-name: animacao__cabecalho;
+    animation-duration: 6s;
+    animation-delay: 1.5s;
+    animation-iteration-count: infinite;
+
 }
 .cabecalho__menu__link:hover{   
-    padding-bottom: 25px;
     border : 2px solid #272727;
-    background-color: #272727;
+    background-color: #111111;
     color: #f6f6f6; 
     box-shadow: 0 0 50px 20px rgba(2, 140, 167, 0.25); 
-    transition: 860ms ease-in-out; 
-     
+    transition: 860ms; 
+    font-size: 1.2rem;   
+    font-weight: inherit; 
 }
 
 .cabecalho__menu__foto{
     padding: 1px, 0px, 1px, 0px;
     height: 70px;
     width: 70px;
-    border: 0.1px solid #000;
+    border: 0.01px solid var(--cor-terciaria);
 }
 
 .apresentacao{
@@ -70,6 +86,8 @@ body {
 }
 .imagem{
     width: 35%;
+    padding-top: 0%;
+    margin-bottom: 32%;
 }
 img{
     border-radius: 10px;
@@ -94,7 +112,8 @@ img{
     justify-content: center;
     align-items: center;
     margin: 5px;
-    gap: 150px;;
+    gap: 150px;
+    flex-wrap: wrap;
 }
 .icones__individuais{
     border-color: #000000;
@@ -130,7 +149,7 @@ img{
     justify-content: center;
     gap: 14px;
     border : 2px solid var(--cor-terciaria);
-    width: 50%;
+    width: 60%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.1rem;
@@ -148,28 +167,30 @@ img{
     
 }
 .rodape{
-    border: solid 0.5px var(--cor-terciaria);
-    padding: 5px;
+    padding-top: 22px;
+    margin-top: 5%;
     color: var(--cor-terciaria);
-    background-color: var(--cor-primaria);
+    background: linear-gradient(180deg, #1a3131 0%, #000000 100%);
     text-align: center;
     font-family: var(--fronte-principal);
     font-size: 1rem; 
-  
-   
+    width: auto;
+    animation-name: animacao__rodape;
+    animation-duration: 10s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite; 
 }
 .imagemPerfil{
     width: 350px;
 }
-.iconesSkills{
+ .iconesSkills{
     width: 30px;
-}
+} 
 
 @media (max-width: 1200px ) {
     .cabecalho{
         padding: 6%;
-
-    }
+      }
     .cabecalho__menu{
         justify-content: center;
     }
@@ -180,6 +201,18 @@ img{
     .apresentacao__conteudo{
         width: auto;
     }
-
 }
+
+@media (max-width: 768px) {
+    .cabecalho {
+      gap: 20px;
+      padding: 3% 0;
+    }
+    .apresentacao {
+      flex-direction: column;
+      gap: 20px;
+      margin: 3% 2%;
+    }
+  }
+  
     
