--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -21,10 +21,7 @@ body {
     margin-bottom: 5px;
     background-color: var(--cor-primaria);  
     width: auto;
-    animation-name: animacao__cabecalho;
-    animation-duration: 6s;
-    animation-delay: 1.5s;
-    animation-iteration-count: infinite;
+ 
 }
 .cabecalho__menu{
     display: flex;
@@ -40,10 +37,6 @@ body {
     padding: 25px;
     transition-duration: 860ms;
     font-weight: bold;  
-    animation-name: animacao__cabecalho;
-    animation-duration: 6s;
-    animation-delay: 1.5s;
-    animation-iteration-count: infinite;
 
 }
 .cabecalho__menu__link:hover{   
@@ -53,7 +46,8 @@ body {
     box-shadow: 0 0 50px 20px rgba(2, 140, 167, 0.25); 
     transition: 860ms; 
     font-size: 1.2rem;   
-    font-weight: inherit; 
+    font-weight: normal;
+     
 }
 
 .cabecalho__menu__foto{
@@ -72,17 +66,39 @@ body {
     flex-direction: row;
 
 }
+.aapresentacao__sobremim{
+  
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-evenly;
+   flex-wrap: nowrap;
+
+}
 .apresentacao__conteudo{
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 30px;
     
+    
+}
+.apresentacao__conteudo__sobremim{
+    width: 90%;
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;  
+    
 }
 .imagem{
     width: 35%;
     padding-top: 0%;
     margin-bottom: 10%;
+    transition: transform 850ms;
+}
+.imagem:hover{
+    transform: scale(1.1);
 }
 img{
     border-radius: 10px;
@@ -97,6 +113,7 @@ img{
 }
 .apresentacao__conteudo__skills{
     padding-left: 30px;
+    width: 90%;
     padding-top: 10px;
     display: flex;
     flex-direction: column;
@@ -140,6 +157,7 @@ img{
 }
 .imgLink{
     width: 20px;
+    border: none;
 }
 .apresentacao__links__link:hover{
     background-color: var(--cor-primaria);
@@ -157,7 +175,12 @@ img{
     width: 100%;
 }
 .imagemPerfil{
-    width: 350px;
+    width: 300px;
+    margin-top: 2%;
+    transition: transform 850ms;
+}
+.imagemPerfil:hover{
+    transform: scale(1.1);  
 }
  .iconesSkills{
     width: 30px;
@@ -168,8 +191,7 @@ img{
         font-size: 0.7rem;
         font-weight:normal;
         margin-bottom: 10%;
-        padding-left: 0%;
-        
+        padding-left: 0%;    
     }
     .cabecalho__menu{
         justify-content: left;
@@ -184,19 +206,27 @@ img{
         width: 60px;
         height: 60px;
     }
+    .apresentacao{
+        gap: 50px;
+    }
     .apresentacao__conteudo__titulo{
         font-size: large;
     }
     .apresentacao__links__link{
+        border-width: 70%;
+        font-size: 0.9rem;
         
     }
+    .apresentacao__skills{
+        width: 100%;
+        margin: auto;
+    }
     .imagem{
-        margin: 6%;
+        width: 65%;       
     }
     .rodape{
         width: auto;
     }
-
 }
 
 @media(max-width: 768px) {
@@ -216,10 +246,7 @@ img{
     .apresentacao__conteudo{
         width: 100%;
     }
-    .imagem{
-            width: 40%;
-            margin: 6%;
-    }
+    
     .apresentacao__links__link{
        width: 35%;
     }
